--- a/routing/src/style.css
+++ b/routing/src/style.css
@@ -1,11 +1,69 @@
 html,
-body,
-#map {
+body {
   padding: 0;
   margin: 0;
   height: 100%;
   width: 100%;
+}
+
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   color: #323232;
+}
+
+.grid-container {
+  margin: 2rem;
+  height: 100%;
+  max-height: calc(100% - 64px);
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: minmax(18rem, 0.5fr) 1fr 1fr;
+  grid-template-rows: 0.4fr 1fr 1fr;
+  gap: 2rem 2rem;
+  grid-template-areas:
+    "panel-start panel-results panel-results"
+    "panel-start panel-results panel-results"
+    "panel-start panel-results panel-results";
+}
+.panel-results {
+  grid-area: panel-results;
+}
+
+.panel-start {
+  grid-area: panel-start;
+}
+
+.grid-container calcite-panel {
+  box-shadow: var(--calcite-shadow-sm);
+}
+
+@media screen and (max-width: 800px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-template-areas: "panel-start" "panel-results";
+  }
+  .panel-start {
+    max-height: 40vh;
+  }
+  .panel-map {
+    height: 40vh;
+  }
+}
+
+calcite-panel {
+  border-block-start: 0;
+}
+
+calcite-shell {
+  background-color: var(--calcite-color-background);
+}
+
+.directions-list {
+  list-style-type: none;
 }
